Adicionando arquivos da pratica01

--- a/Praticas/pratica01/src/login.html
+++ b/Praticas/pratica01/src/login.html
@@ -23,7 +23,7 @@
             </div>
             <div>
                 <input type="submit" value="Entrar" />
-                <input type="submit" value="Entrar" />
+                <a href="#">Esqueceu a Senha?</a>
             </div>
         </form>
     </main>
